> Updated some color and added some text and images.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
         <p>Find the direction of Qibla from your location.</p>
         <button onclick="findQibla()">Find Qibla</button>
         <div id="qibla-result"></div>
+        <img src="https://via.placeholder.com/400x200?text=Qibla+Finder" alt="Qibla Finder"/>
     </section>
 
     <section id="prayer-times">
         <h2>Prayer Times</h2>
         <p>Prayer times based on your timezone will be displayed here.</p>
         <div id="prayer-times-result"></div>
+        <img src="https://via.placeholder.com/400x200?text=Prayer+Times" alt="Prayer Times"/>
     </section>
 
     <section id="duas">
@@ -42,6 +44,7 @@
             <li>Du'a for Protection</li>
             <li>Du'a for Health</li>
         </ul>
+        <img src="https://via.placeholder.com/400x200?text=Duas" alt="Duas"/>
     </section>
 
     <section id="prophets">
@@ -54,6 +57,14 @@
             <li>Jesus</li>
             <li>Muhammad</li>
         </ul>
+        <img src="https://via.placeholder.com/400x200?text=Prophets" alt="Prophets"/>
+    </section>
+
+    <section>
+        <h2>Islamic Teachings</h2>
+        <p>"Indeed, prayer prohibits immorality and wrongdoing, and the remembrance of Allah is greater." - Quran
+            29:45</p>
+        <img src="https://via.placeholder.com/400x200?text=Islamic+Teachings" alt="Islamic Teachings"/>
     </section>
 </main>
 
