--- a/quran.html
+++ b/quran.html
@@ -26,6 +26,7 @@
         <p>You alone we worship, and You alone we ask for help.</p>
         <p>Guide us on the Straight Path.</p>
         <p>The path of those who have received Your grace; not the path of those who have brought down wrath upon themselves, nor of those who have gone astray.</p>
+        <img src="https://via.placeholder.com/400x200?text=Quran" alt="Quran" />
     </section>
     <!-- Add more Surahs as needed -->
 </main>
